crates/lang/macro/tests/ui/fail/C-04-missing-constructor.stderr
error: missing ink! constructor
  --> $DIR/C-04-missing-constructor.rs:4:1
   |
4  | / mod noop {
5  | |     #[ink(storage)]
6  | |     pub struct Noop {}
7  | |
...  |
11 | |     }
12 | | }
   | |_^
